--- a/BMI/package.json
+++ b/BMI/package.json
@@ -7,7 +7,7 @@
     "appType": "app",
     "appDisplayName": "BMI",
     "iconFile": "resources/icon.png",
-    "wipeColor": "",
+    "wipeColor": "#607d8b",
     "requestedPermissions": [
       "access_user_profile"
     ],
